--- a/src/content/ideas/2025/gios-pr4/index.mdx
+++ b/src/content/ideas/2025/gios-pr4/index.mdx
@@ -26,15 +26,52 @@ import ddiaImg from "../../../books/ddia.jpg";
 
 ## Introduction: The "Magic" of Google Drive
 
-Have you ever stopped to think about the magic behind a service like Google Drive or Dropbox? You can create a document on your laptop, and seconds later, it appears on your phone, perfectly in sync. You can share it with a colleague across the world, and you can both edit it, trusting that your changes won't be lost. This seamless synchronization feels effortless, but it's the result of a complex, carefully engineered **Distributed File System (DFS)**.
+The seamless sync of Google Drive feels like magic. I can edit a document on my laptop, and it instantly appears on my phone. This seamless synchronization feels effortless, but it's the result of a complex, carefully engineered **Distributed File System (DFS)**.
 
 A DFS is the backbone of modern cloud storage and collaboration. It allows multiple, geographically dispersed clients to access and modify a shared set of files as if they were stored on a single, local machine. For my final project in Georgia Tech's operating systems course, I was tasked with building one from the ground up in C++.
 
-In the first project I built a simple file system with a single client and server. In the second project I extended it to add a proxy and cache server. This project is the final step in the journey, building a distributed file system with multiple clients and servers. This project was a fantastic opportunity to tackle the challenges of distributed computing. This post explores the key lessons from that journey, focusing on the three pillars of any DFS: remote communication, data consistency, and synchronization.
+In the first project I built a simple file system with a single client and 
+server. In the second project I extended it to add a proxy and cache server. 
+This project is the final step in the journey, building a distributed file 
+system with multiple clients and servers. This project was a fantastic 
+opportunity to tackle the challenges of distributed computing. This post 
+explores the key lessons from that journey, focusing on the three pillars of 
+any DFS: remote communication, data consistency, and synchronization.
 
 ## The Anatomy of a Distributed File System
 
-{/* TODO: Add a figure here illustrating the basic DFS architecture: multiple clients connected to a central server, each with a local directory that caches files. */}
+{/* <Figure
+  caption="A simplified Distributed File System (DFS) architecture. Clients maintain local caches of files and use Remote Procedure Calls (RPCs) to communicate with a central server that manages the authoritative file storage."
+> */}
+```mermaid
+graph TD
+    subgraph "File Server"
+        direction LR
+        S[("gRPC Server")]
+        DB[(File Storage)]
+        S --- DB
+    end
+
+    subgraph "Client A"
+        direction LR
+        CA[Application] --> CACache["Local Directory<br/>(Cache)"]
+    end
+
+    subgraph "Client B"
+        direction LR
+        CB[Application] --> CBCache["Local Directory<br/>(Cache)"]
+    end
+
+    CACache -- "File & Metadata<br/>Operations (RPC)" --> S
+    S -- "File Contents &<br/>Cache Invalidations" --> CACache
+
+    CBCache -- "File & Metadata<br/>Operations (RPC)" --> S
+    S -- "File Contents &<br/>Cache Invalidations" --> CBCache
+
+    style S fill:#f9f,stroke:#333,stroke-width:2px
+    style DB fill:#ccf,stroke:#333,stroke-width:2px
+```
+{/* </Figure> */}
 
 A DFS hides the complexity of the network behind the standard file system interface that applications already know how to use (`open`, `read`, `write`, `close`). But under the hood, it must make fundamental design decisions about how data is stored, accessed, and kept consistent.
 
@@ -179,7 +216,31 @@ int main() {
 ```
 All the complexity of serialization, network sockets, and HTTP/2 framing is hidden behind that single `stub_->SayHello()` call. This is the power of a modern RPC framework.
 
-{/* TODO: Add a figure illustrating the client-server RPC flow: client calls stub method, gRPC serializes protobuf message, sends over network, server receives, deserializes, calls the service implementation, and sends response back. */}
+{/* <Figure
+  caption="The Remote Procedure Call (RPC) flow. The client call is marshalled, sent over the network, and unmarshalled by the server stub, which then invokes the actual service implementation. The process is reversed for the response."
+> */}
+```mermaid
+sequenceDiagram
+    participant C as Client App
+    participant CS as Client Stub (Generated)
+    participant G as gRPC Framework
+    participant SS as Server Stub (Generated)
+    participant S as Service Impl
+
+    C->>+CS: SayHello("world")
+    CS->>+G: Marshal Request<br/>(Serialize Protobuf)
+    G->>G: Send over Network (HTTP/2)
+    G->>+SS: Receive Data
+    SS->>SS: Unmarshal Request<br/>(Deserialize Protobuf)
+    SS->>+S: SayHello(request)
+    S-->>-SS: return "Hello world"
+    SS->>+G: Marshal Response
+    G-->>G: Send over Network
+    G-->>-CS: Receive Response
+    CS-->>CS: Unmarshal Response
+    CS-->>-C: return "Hello world"
+```
+{/* </Figure> */}
 
 ## The Consistency Challenge: From Strong to Eventual
 
@@ -197,9 +258,38 @@ This project implemented a **weak consistency model** inspired by the **Andrew F
 - The client determines if a file has changed by comparing its local version's CRC32 checksum and last-modified timestamp against the server's version.
 - When a client closes a modified file, it uploads the new version to the server. The server then sends out **cache invalidation** callbacks to all other clients that have a copy of that file, telling them their version is now stale.
 
-This "write-on-close" strategy provides good performance for reads, as they are served from the local cache, while still providing reasonable guarantees about seeing up-to-date data.
+This "write-on-close" strategy provides good performance for reads, as they are served from the local cache, while still providing reasonable guarantees about seeing up-to-date data. This "write-on-close" strategy provided the ideal trade-off for this project: it made reads snappy by serving them from the local cache, while still providing strong enough guarantees to prevent lost updates and keep data reasonably fresh across all clients.
 
-{/* TODO: Add a figure illustrating the weak consistency model with cache invalidation. Show Client A writing a file, the server getting the update, and then sending a callback to Client B to invalidate its local cached copy. */}
+{/* <Figure
+    caption="Weak consistency with cache invalidation. A write from Client A updates the server, which then asynchronously tells Client B that its cached copy is stale. Client B will fetch the new version on its next read."
+> */}
+```mermaid
+sequenceDiagram
+    participant ClientA as Client A
+    participant Server
+    participant ClientB as Client B
+
+    ClientA->>Server: 1. Store("file.txt", "new content")
+    activate Server
+    Server-->>ClientA: 2. Acknowledge Write
+    deactivate Server
+
+    Note right of Server: Server detects change,<br/>finds other clients with<br/>a cached copy of "file.txt"
+
+    Server->>ClientB: 3. InvalidateCache("file.txt") [Async]
+    activate ClientB
+    Note over ClientB: Marks local copy as stale
+    ClientB-->>Server: 4. (Optional) Ack Invalidation
+    deactivate ClientB
+
+    critical Next read from Client B
+        ClientB->>Server: 5. Fetch("file.txt")
+        activate Server
+        Server-->>ClientB: 6. Return "new content"
+        deactivate Server
+    end
+```
+{/* </Figure> */}
 
 ## Synchronization in Action: `inotify` and Server Callbacks
 
